--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "parcel": "^1.10.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
+  },
+  "devDependencies": {
+    "parcel": "^1.10.3"
   }
 }
