--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "express": "^4.16.4",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "truffle-contract": "^3.0.6",
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "parcel": "^1.10.3"
