metamask checking logic

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "nodemon -w server -V server/app.js",
     "watch": "parcel watch client/public/index.html",
+    "ganache": "ganache-cli -p 8545 -i 999",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
