--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.7.3",
     "express": "^4.16.4",
     "react": "^16.6.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.0",
     "truffle-contract": "^3.0.6",
     "web3": "^1.0.0-beta.36"
