--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "parcel watch client/public/index.html",
     "ganache": "ganache-cli -p 8545 -i 999",
     "clear": "rm -rf .cache dist build",
+    "truffle-rinkeby": "truffle migrate --network rinkeby",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
