--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "nodemon -w server -V server/app.js",
-    "watch": "parcel watch client/public/index.html",
+    "parcel-watch": "parcel watch client/public/index.html",
     "parcel-build": "parcel build client/public/index.html",
     "forever": "forever start server/app.js --uid 'world-house'",
     "ganache": "ganache-cli -p 8545 -i 999",
