--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "chart.js": "^2.7.3",
     "express": "^4.16.4",
     "react": "^16.6.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.0",
-    "truffle-contract": "^3.0.6",
-    "web3": "^1.0.0-beta.34"
+    "truffle-contract": "3.0.6",
+    "web3": "1.0.0-beta.34"
   },
   "devDependencies": {
     "parcel": "^1.10.3"
